--- a/index8.html
+++ b/index8.html
@@ -1,33 +1,41 @@
 <html>
 <head>
-
+	
 <meta charset="utf-8"/>
 <link rel="stylesheet" href="reset.css">
 <link rel="stylesheet" href="960_12_col.css">
 <link rel="stylesheet" href="text.css">
 <link rel="stylesheet" href="STYLE9.css">
+<!-- The head contains css textures -->		
 
 </head>
 
 <body>
 
-<div class="wrap container_12">
-	<header class="clearfix">
-		<h1 class="grid_8">My Website</h1>
-		<nav class="grid_4">
-			<ul>
+<div class="wrap container_12"> <!-- Create many sections according to the container type -->
+	<header class="clearfix"> <!--Clear website to start with -->
+		<h1 class="grid_8">My Website</h1>  <!-- Insert My Website under grid 1-->
+		<nav class="grid_4"> <!-- Create navigation class under the fourth grid-->
+			<ul>	<!-- Create references to a directory name-->
 				<li><a href="#">Home</a></li>
 				<li><a href="#">About</a></li>
 				<li><a href="#">Contact</a></li>
 			</ul>
 		</nav>
 	</header>
-
-<div class="main clearfix">
-	<div class="primary grid_8">
+<!-- Grid_n is where the section of the site an object would be used -->
+<div class="main clearfix"> <!--The main part of the website -->
+	<div class="primary grid_8"> <!--Another grid-->
 		<section class="grid_2 alpha">
 	<h1>What We Are</h1>	
-		<p>ghlapghargl
+		<p>ghlapghargl <!-- Create paragraph under first header -->
+			a
+		</p>
+
+	</section>
+	<section class="grid_2">
+	<h1>What We Are</h1>	
+		<p>ghlapghargl <!-- Create paragraph under header -->
 			a
 
 		</p>
@@ -35,15 +43,7 @@
 	</section>
 	<section class="grid_2">
 	<h1>What We Are</h1>	
-		<p>ghlapghargl
-			a
-
-		</p>
-
-	</section>
-	<section class="grid_2">
-	<h1>What We Are</h1>	
-		<p>ghlapghargl
+		<p>ghlapghargl <!-- Create paragraph under header -->
 			a
 
 		</p>
@@ -52,7 +52,7 @@
 
 	<section class="grid_2 omega">
 	<h1>What We Are</h1>	
-		<p>ghlapghargl
+		<p>ghlapghargl <!-- Create paragraph under header -->
 			a
 
 		</p>
@@ -60,7 +60,7 @@
 	</section>
 	<section class="grid_2 alpha">
 	<h1>What We Are</h1>	
-		<p>ghlapghargl
+		<p>ghlapghargl <!-- Create paragraph under header -->
 			a
 
 		</p>
@@ -68,7 +68,7 @@
 	</section>
 	<section class="grid_2">
 	<h1>What We Are</h1>	
-		<p>ghlapghargl
+		<p>ghlapghargl <!-- Create paragraph under header -->
 			a
 
 		</p>
@@ -76,7 +76,7 @@
 	</section>
 	<section class="grid_2">
 	<h1>What We Are</h1>	
-		<p>ghlapghargl
+		<p>ghlapghargl <!-- Create paragraph under header -->
 			a
 
 		</p>
@@ -85,14 +85,14 @@
 
 	<section class="grid_2 omega">
 	<h1>What We Are</h1>	
-		<p>ghlapghargl
+		<p>ghlapghargl <!-- Create paragraph under header -->
 			a
 
 		</p>
 
 	</section>
 	</div>
-		<aside class="grid_4">
+		<aside class="grid_4"> <!-- Under grid 4, set object links -->
 			<ul>
 				<li><a href="#">Item</a></li>
 				<li><a href="#">Item</a></li>
